Add api/v2/events endpoints to core